Added Faction Handling

--- a/src/MobInfo.xaml
+++ b/src/MobInfo.xaml
@@ -65,7 +65,7 @@
                         <TextBlock>
                              <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                  <TextBlock Text="{Binding Name}"></TextBlock>     
-                                 <Button Visibility="{Binding HaseUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
+                                 <Button Visibility="{Binding HasUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
                                     <Image Source="pack://application:,,,/HyperlinkForward.png"/>
                                 </Button>
                              </Hyperlink> 
@@ -125,15 +125,13 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock Visibility="{Binding HaseUrl}">
+                                    <TextBlock>
                                          <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
-                                          <TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
-                                             <Button Visibility="{Binding HaseUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
+                                          <TextBlock Text="{Binding DisplayText}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
+                                             <!--<Button Visibility="{Binding HasUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
                                                 <Image Source="pack://application:,,,/HyperlinkForward.png"/>
-                                            </Button>
+                                            </Button>-->
                                          </Hyperlink> 
-                                        </TextBlock>
-                                    <TextBlock Visibility="{Binding HaseNoUrl}" Text="{Binding Name}">
                                     </TextBlock>
                                 </StackPanel>
                             </DataTemplate>
@@ -156,15 +154,15 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock Visibility="{Binding HaseUrl}">
+                                    <TextBlock Visibility="{Binding HasUrl}">
                                          <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                           <TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
-                                             <Button Visibility="{Binding HaseUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
+                                             <Button Visibility="{Binding HasUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
                                                 <Image Source="pack://application:,,,/HyperlinkForward.png"/>
                                             </Button>
                                          </Hyperlink> 
                                         </TextBlock>
-                                    <TextBlock Visibility="{Binding HaseNoUrl}" Text="{Binding Name}">
+                                    <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}">
                                     </TextBlock>
                                 </StackPanel>
                             </DataTemplate>
@@ -187,15 +185,15 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock Visibility="{Binding HaseUrl}">
+                                    <TextBlock Visibility="{Binding HasUrl}">
                                          <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                           <TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
-                                             <Button Visibility="{Binding HaseUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
+                                             <Button Visibility="{Binding HasUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
                                                 <Image Source="pack://application:,,,/HyperlinkForward.png"/>
                                             </Button>
                                          </Hyperlink> 
                                         </TextBlock>
-                                    <TextBlock Visibility="{Binding HaseNoUrl}" Text="{Binding Name}">
+                                    <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}">
                                     </TextBlock>
                                 </StackPanel>
                             </DataTemplate>
@@ -223,12 +221,12 @@
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <StackPanel Orientation="Horizontal" MinWidth="100">
-                                                <TextBlock Visibility="{Binding HaseUrl}">
+                                                <TextBlock Visibility="{Binding HasUrl}">
                                                     <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                                         <TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
                                                     </Hyperlink> 
                                                 </TextBlock>
-                                                <TextBlock Visibility="{Binding HaseNoUrl}" Text="{Binding Name}" Style="{StaticResource MyMobTextBoxWindowSyle}"></TextBlock>
+                                                <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}" Style="{StaticResource MyMobTextBoxWindowSyle}"></TextBlock>
                                             </StackPanel>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
@@ -269,15 +267,15 @@
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock Visibility="{Binding HaseUrl}">
+                                    <TextBlock Visibility="{Binding HasUrl}">
                                          <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                           <TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
-                                             <Button Visibility="{Binding HaseUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
+                                             <Button Visibility="{Binding HasUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
                                                 <Image Source="pack://application:,,,/HyperlinkForward.png"/>
                                             </Button>
                                          </Hyperlink> 
                                         </TextBlock>
-                                    <TextBlock Visibility="{Binding HaseNoUrl}" Text="{Binding Name}">
+                                    <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}">
                                     </TextBlock>
                                 </StackPanel>
                             </DataTemplate>
