Con Window UI updates

--- a/src/MobInfo.xaml
+++ b/src/MobInfo.xaml
@@ -59,7 +59,7 @@
                         <TextBlock FontSize="16" Foreground="Red" Text="{Binding ErrorResults}"></TextBlock>
                     </StackPanel>
                 </StackPanel>
-                <StackPanel Orientation="Vertical" Margin="0, 0, 8, 0" Width="245" Visibility="{Binding HasNoErrors}">
+                <StackPanel Orientation="Vertical" Margin="0, 0, 8, 0" Width="250" Visibility="{Binding HasNoErrors}">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="Name" Width="100"></TextBlock>
                         <TextBlock>
@@ -76,12 +76,15 @@
                         <TextBlock Text="{Binding Race}"></TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Class" Width="100"></TextBlock>
-                        <TextBlock Text="{Binding Class}"></TextBlock>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Level" Width="100"></TextBlock>
-                        <TextBlock Text="{Binding Level}"></TextBlock>
+                        <TextBlock Text="Level - Class" Width="100"></TextBlock>
+                        <TextBlock>
+                            <TextBlock.Text>
+                                <MultiBinding StringFormat="{}{0} - {1}">
+                                    <Binding Path="Level"/>
+                                    <Binding Path="Class"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="Primary Faction" Width="100"></TextBlock>
@@ -99,59 +102,82 @@
                         <TextBlock Text="HP" Width="100"></TextBlock>
                         <TextBlock Text="{Binding HP}"></TextBlock>
                     </StackPanel>
-                    <!--<StackPanel Orientation="Horizontal">
-                        <TextBlock Text="HPRegen" Width="100"></TextBlock>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="HP Regen" Width="100"></TextBlock>
                         <TextBlock Text="{Binding HPRegen}"></TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="ManaRegen" Width="100"></TextBlock>
+                        <TextBlock Text="Mana Regen" Width="100"></TextBlock>
                         <TextBlock Text="{Binding ManaRegen}"></TextBlock>
-                    </StackPanel>-->
-                    <StackPanel Orientation="Horizontal">
+                    </StackPanel>
+                    <!--<StackPanel Orientation="Horizontal">
                         <TextBlock Text="AttacksPerRound" Width="100"></TextBlock>
                         <TextBlock Text="{Binding AttacksPerRound}"></TextBlock>
-                    </StackPanel>
+                    </StackPanel>-->
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="AttackSpeed" Width="100"></TextBlock>
+                        <TextBlock Text="Attack Speed" Width="100"></TextBlock>
                         <TextBlock Text="{Binding AttackSpeed}"></TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="DamagePerHit" Width="100"></TextBlock>
+                        <TextBlock Text="Damage Per Hit" Width="100"></TextBlock>
                         <TextBlock Text="{Binding DamagePerHit}"></TextBlock>
                     </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="MR FR CR PR DR" Width="100"></TextBlock>
+                        <TextBlock>
+                            <Run Foreground="White" Text="{Binding Resist_Magic}"/>
+                            <Run Foreground="Red" Text="{Binding Resist_Fire}"/>
+                            <Run Foreground="Aqua" Text="{Binding Resist_Cold}"/>
+                            <Run Foreground="GreenYellow" Text="{Binding Resist_Poison}"/>
+                            <Run Foreground="ForestGreen" Text="{Binding Resist_Disease}"/>
+                        </TextBlock>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="See: Invis" Margin="0, 0, 4, 0" Width="50"></TextBlock>
+                        <CheckBox Name="invis_rad" IsEnabled="False" IsChecked="False"></CheckBox>
+                        <TextBlock Text="IVU" Margin="3, 0, 0, 0" Width="25"></TextBlock>
+                        <CheckBox Name="ivu_rad" IsEnabled="False" IsChecked="False"></CheckBox>
+                        <TextBlock Text="Sneak" Margin="3, 0, 0, 0" Width="35"></TextBlock>
+                        <CheckBox Name="sneak_rad" IsEnabled="False" IsChecked="False"></CheckBox>
+                        <TextBlock Text="Imp Hide" Margin="2, 0, 2, 0" Width="50"></TextBlock>
+                        <CheckBox Name="ihide_rad" IsEnabled="False" IsChecked="False"></CheckBox>
+                    </StackPanel>
 
-                    <TextBlock>Factions</TextBlock>
-                    <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding Factions}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel>
-                                    <TextBlock>
-                                         <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
-                                          <TextBlock Text="{Binding DisplayText}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>
-                                         </Hyperlink> 
-                                    </TextBlock>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="{x:Type ListViewItem}">
-                                <Setter Property="Background" Value="Transparent" />
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                            <ContentPresenter />
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                    </ListView>
-                    <TextBlock>Related Quests</TextBlock>
-                    <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding RelatedQuests}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel>
-                                    <TextBlock Visibility="{Binding HasUrl}">
+                    <StackPanel Name="FactionHitsStack">
+                        <TextBlock>Factions</TextBlock>
+                        <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding Factions}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel>
+                                        <TextBlock>
+                                            <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
+                                                <TextBlock Text="{Binding DisplayText}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>
+                                             </Hyperlink> 
+                                        </TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListViewItem}">
+                                    <Setter Property="Background" Value="Transparent" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                                <ContentPresenter />
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
+                    </StackPanel>
+                    <StackPanel Name="QuestsStack">
+                        <TextBlock>Related Quests</TextBlock>
+                        <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding RelatedQuests}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel>
+                                        <TextBlock Visibility="{Binding HasUrl}">
                                          <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                           <TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
                                              <Button Visibility="{Binding HasUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
@@ -159,56 +185,60 @@
                                             </Button>
                                          </Hyperlink> 
                                         </TextBlock>
-                                    <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}">
-                                    </TextBlock>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="{x:Type ListViewItem}">
-                                <Setter Property="Background" Value="Transparent" />
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                            <ContentPresenter />
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                    </ListView>
+                                        <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}">
+                                        </TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListViewItem}">
+                                    <Setter Property="Background" Value="Transparent" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                                <ContentPresenter />
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
+                    </StackPanel>
                 </StackPanel>
-                <StackPanel Orientation="Vertical" Visibility="{Binding HasNoErrors}" Width="245">
-                    <TextBlock>Known Loot</TextBlock>
-                    <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding KnownLoot}" 
+                <StackPanel Orientation="Vertical" Width="245">
+                    <StackPanel Name="KnownLootStack">
+                        <TextBlock>Known Loot</TextBlock>
+                        <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding KnownLoot}" 
                               ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="False"
                               MaxHeight="245">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal" MinWidth="100">
-                                    <TextBlock Visibility="{Binding HasUrl}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal" MinWidth="100">
+                                        <TextBlock Visibility="{Binding HasUrl}">
                                         <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                             <TextBlock Style="{StaticResource MyMobUrlSyle}">
-                                                <TextBlock.Text>
-                                                    <MultiBinding StringFormat="{}{0} - {1}%">
-                                                        <Binding Path="Name"/>
-                                                        <Binding Path="Value"/>
-                                                    </MultiBinding>
-                                                </TextBlock.Text>
+                                                    <TextBlock.Text>
+                                                        <MultiBinding StringFormat="{}{0} - {1}%">
+                                                            <Binding Path="Name"/>
+                                                            <Binding Path="Value"/>
+                                                        </MultiBinding>
+                                                    </TextBlock.Text>
                                             </TextBlock>
                                             <!--<TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>-->     
                                         </Hyperlink> 
                                     </TextBlock>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                    <TextBlock>Specials</TextBlock>
-                    <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding Specials}">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel>
-                                    <TextBlock Visibility="{Binding HasUrl}">
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </StackPanel>
+                    <StackPanel Name="SpecialAbilitiesStack">
+                        <TextBlock>Specials</TextBlock>
+                        <ListView Margin="10, 0, 0, 0" Style="{StaticResource MyListViewStyle}" ItemsSource="{Binding Specials}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel>
+                                        <TextBlock Visibility="{Binding HasUrl}">
                                          <Hyperlink NavigateUri="{Binding Url}" RequestNavigate="Hyperlink_RequestNavigate">
                                           <TextBlock Text="{Binding Name}" Style="{StaticResource MyMobUrlSyle}"></TextBlock>     
                                              <Button Visibility="{Binding HasUrl}" Margin="1" FontSize="7" Width="14" Height="14" Padding="0" ToolTip="Open in Web Browser" Click="Hyperlink_RequestNavigatebutton">
@@ -216,24 +246,25 @@
                                             </Button>
                                          </Hyperlink> 
                                         </TextBlock>
-                                    <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}">
-                                    </TextBlock>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="{x:Type ListViewItem}">
-                                <Setter Property="Background" Value="Transparent" />
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                            <ContentPresenter />
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                    </ListView>
+                                        <TextBlock Visibility="{Binding HasNoUrl}" Text="{Binding Name}">
+                                        </TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListViewItem}">
+                                    <Setter Property="Background" Value="Transparent" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                                <ContentPresenter />
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
+                    </StackPanel>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Visibility="{Binding HasNoErrors}">
                     <StackPanel Orientation="Horizontal">
